# dom-protocol

./: .dom-protected-files  .gitignore  AGENTS.md  AUDIT_REPORT.md  AUDIT_TEST_ISOLATION.md  CLAUDE.md  Cargo.toml  KNOWN_ISSUES.md  README.md  SECURITY.md  WHITEPAPER.md  WORKLOG.md  deny.toml  install-dom-runners.bat
crates/dom-agent-runner/: Cargo.toml
crates/dom-agent-runner/src/: cli.rs  doctor.rs  git.rs  lib.rs  main.rs  prompt.rs  repo.rs  report.rs  run.rs
crates/dom-agent-runner/tests/: integration.rs
crates/dom-chain/: Cargo.toml
crates/dom-chain/fuzz/: Cargo.toml
crates/dom-chain/src/: chain_state.rs  genesis.rs  ibd.rs  kani_invariants.rs  lib.rs  reorg.rs
crates/dom-chain/tests/: aggregate_balance_adversarial.rs  block_validation_ingress_adversarial.rs  chain_invariants_proptest.rs  coinbase_reorg_maturity.rs  common.rs  corruption_detection.rs  difficulty_adjustment.rs  duplicate_kernel_excess_production_path.rs  fix018_reorg_future_timestamp_probe.rs  fork_choice_negative.rs  genesis_identity.rs  ibd_adversarial.rs  ibd_batch_step_xdiff.rs  ibd_directed_corruption.rs  ibd_persistence.rs  kav_genesis_chainid.rs  kav_mtp_semantics.rs  reorg_equivalence.rs  same_block_spend_cutthrough.rs  shield_i3_convergence.rs  shield_reorg_cross_branch_directed.rs  shield_reorg_cross_branch_proptest.proptest-regressions  shield_reorg_cross_branch_proptest.rs  shield_reorg_shared_tx_directed.rs
crates/dom-cli/: Cargo.toml
crates/dom-cli/src/: main.rs  node.rs
crates/dom-config/: Cargo.toml
crates/dom-config/src/: lib.rs
crates/dom-config/tests/: config_roundtrip_proptest.rs  network_kav.rs  secret_hygiene_lensb.rs
crates/dom-consensus/: Cargo.toml
crates/dom-consensus/fuzz/: Cargo.toml
crates/dom-consensus/src/: block.rs  block_full.rs  cutthrough.rs  kani_invariants.rs  lib.rs  transaction.rs
crates/dom-consensus/tests/: adversarial_block_validation.rs  block_weight_consistency.rs  bulletproof_bp_consensus.rs  ds001_e2e_reachability.rs  invariant_arith_and_xdiff.rs  kav_byte_freeze.rs  kav_negative_tx_steps.rs  no_inflation_proptest.proptest-regressions  no_inflation_proptest.rs  probes_substep_boundaries.rs
crates/dom-core/: Cargo.toml
crates/dom-core/fuzz/: Cargo.toml
crates/dom-core/src/: address.rs  constants.rs  error.rs  fee_policy.rs  kani_invariants.rs  lib.rs  types.rs
crates/dom-core/tests/: address_fixpoint_proptest.rs  address_kav_negative.rs  address_roundtrip_proptest.rs  reward_amount_kav.rs
crates/dom-crypto/: Cargo.toml
crates/dom-crypto/fuzz/: .gitignore  Cargo.toml
crates/dom-crypto/src/: bulletproof.rs  bulletproof_bp.rs  h_generator.rs  hash.rs  kani_invariants.rs  keys.rs  lib.rs  pedersen.rs  range_proof.rs  recovery.rs  schnorr.rs  sec1_zkp_bridge.rs
crates/dom-crypto/tests/: algebraic_proptest.rs  bulletproof_adversarial.rs  bulletproof_bp_adversarial.rs  bulletproof_vectors.rs  conformance_kav.rs  differential_crypto.rs  drift_freeze_kav.rs  infinity_rejection.rs  is_square_equivalence_proof.rs  negative_kav.rs  range_proof_final_vectors.rs  robustness_complement_identity_panic.rs  xdiff_scalar_reduction.rs
crates/dom-faucet/: Cargo.toml
crates/dom-faucet/fuzz/: Cargo.toml
crates/dom-faucet/src/: lib.rs  main.rs
crates/dom-faucet/tests/: fix_007_rate_limit_toctou.rs  payment_request_kav.rs
crates/dom-integration-tests/: Cargo.toml
crates/dom-integration-tests/src/: helpers.rs  lib.rs
crates/dom-integration-tests/tests/: adversarial_handshake.rs  adversarial_outbound.rs  adversarial_relay.rs  chain_persistence.rs  deterministic_replay.rs  ibd.rs  ibd_two_node.rs  late_join.rs  mempool_relay.rs  p2p_msg_rate_limit.rs  p2p_two_node_connect.rs  pex_addr.rs  reorg.rs  replay_determinism.rs  robustness_tx_replay_p2p.rs  spend_e2e.rs  sync_with_live_miner.rs  three_node.rs  transfer_slate_e2e.rs  two_node.rs  wallet_flow.rs  wallet_v3_rpc.rs
crates/dom-mempool/: Cargo.toml
crates/dom-mempool/fuzz/: Cargo.toml
crates/dom-mempool/src/: kani_invariants.rs  lib.rs
crates/dom-mempool/tests/: admission_gate_xdiff.rs  convergence_semantics.rs  mempool_adversarial.rs  mempool_invariants_proptest.rs  persisted_state_corruption.rs  robustness_admission_ordering.rs
crates/dom-node/: Cargo.toml  build.rs
crates/dom-node/fuzz/: Cargo.toml
crates/dom-node/src/: future_block_queue.rs  identity.rs  lib.rs  lock_order.rs  main.rs  metrics.rs  miner.rs  missing_block_tracker.rs  msg_rate_limit.rs  node.rs  node_handle.rs  node_tasks.rs  orphan_pool.rs  peer_scoring.rs  pex.rs  replay_snapshot.rs  task_supervisor.rs  test_dir.rs  time_health.rs  wallet_core_api.rs  wallet_helpers.rs  wallet_scan.rs
crates/dom-node/tests/: mainnet_genesis_guard.rs  multinode_reordered_delivery.rs  no_wallet_mining_regtest_ok.rs  no_wallet_mining_testnet_fail_closed.rs  node_wallet_dir.rs  orphan_convergence_ad.rs  probe_mode.rs  shield_ban_port_rotation_kav.rs  shield_getblockdata_amplification.rs  shield_miner_randomx_seed_kav.rs  shield_missing_block_tracker_flood.rs  shield_msg_rate_limit_bypass.rs  shield_noise_static_key_kav.rs  shield_pex_eclipse_bias.rs  shield_relay_dead_module_dissolution.rs  sybil_resistance.rs  wallet_restore_rescan.rs
crates/dom-pmmr/: Cargo.toml
crates/dom-pmmr/fuzz/: Cargo.toml
crates/dom-pmmr/src/: kani_invariants.rs  lib.rs
crates/dom-pmmr/tests/: accumulator_proptest.rs  adversarial_suite.rs  bag_peaks_proptest.rs  kav_frozen_roots.rs  (+1 more)
crates/dom-pow/: Cargo.toml
crates/dom-rpc/: Cargo.toml  build.rs
crates/dom-serialization/: Cargo.toml
crates/dom-sidecar/: Cargo.toml
crates/dom-slate/: Cargo.toml
crates/dom-store/: Cargo.toml
crates/dom-test-runner/: Cargo.toml
crates/dom-test-vectors/: Cargo.toml
crates/dom-tx/: Cargo.toml
crates/dom-wallet/: CHANGELOG.md  Cargo.toml  INVARIANTS.md
crates/dom-wallet-app/: ARCHITECTURE.md  Cargo.toml
crates/dom-wallet-core-api/: Cargo.toml
crates/dom-wallet-crypto/: Cargo.toml
crates/dom-wallet-keys/: Cargo.toml
crates/dom-wallet-recovery/: Cargo.toml
crates/dom-wallet2/: Cargo.toml
crates/dom-wire/: Cargo.toml
(+560 files in other folders)
