[workspace]
resolver = "2"
members = [
    "crates/dom-cli",
    "crates/dom-core",
    "crates/dom-consensus",
    "crates/dom-crypto",
    "crates/dom-serialization",
    "crates/dom-pmmr",
    "crates/dom-pow",
    "crates/dom-chain",
    "crates/dom-wire",
    "crates/dom-tx",
    "crates/dom-slate",
    "crates/dom-mempool",
    "crates/dom-store",
    "crates/dom-config",
    "crates/dom-node",
    "crates/dom-wallet",
    "crates/dom-wallet-crypto",
    "crates/dom-wallet-keys",
    "crates/dom-wallet2",
    "crates/dom-rpc",
    "crates/dom-test-vectors",
    "crates/dom-integration-tests",
    "crates/dom-explorer",
    "crates/dom-faucet",
    "crates/dom-wallet-app",
    "crates/dom-test-runner",
    "crates/dom-agent-runner",
]

# Tauri desktop wallet — excluded from the workspace because it needs a
# frontend dist/ that would break `cargo build --workspace`. Built on its
# own from wallet-desktop/ (npm run tauri build / CI).
exclude = [
    "wallet-desktop",
]

[workspace.package]
version     = "0.1.0"
edition     = "2021"
rust-version = "1.75"
authors     = ["Soren Planck <contact@dom-protocol.org>"]
license     = "MIT"
repository  = "https://github.com/dom-protocol/dom"

# ── Shared dependency versions ────────────────────────────────────────────────
[workspace.dependencies]
# Cryptography — audited crates only
secp256k1-zkp = { git = "https://github.com/BlockstreamResearch/rust-secp256k1-zkp", rev = "264e84adf7b06fb4d028eb2fd992f33c4d8999b7", features = ["global-context", "rand-std"] }
# Bulletproof migration (Phase 1) — standard Bulletproofs via grin's secp256k1-zkp.
# Exact pin (no floating); coexists with Blockstream secp256k1-zkp (disjoint native symbols).
grin_secp256k1zkp = "=0.7.15"
randomx-rs       = "1.4.1"
secp256k1   = { version = "0.28", features = ["global-context", "rand-std"] }
blake2      = { version = "0.10" }
sha2        = { version = "0.10" }
hmac        = { version = "0.12" }
hkdf        = { version = "0.12" }
k256        = { version = "0.13", features = ["hash2curve", "arithmetic", "serde", "expose-field"] }
zeroize     = { version = "1.7", features = ["derive"] }
argon2      = { version = "0.5", features = ["zeroize"] }
chacha20poly1305 = { version = "0.10", features = ["alloc"] }
subtle      = { version = "2.5" }
rand_core   = { version = "0.6" }
rand        = { version = "0.8" }
hex         = { version = "0.4" }
# Storage
lmdb        = { package = "lmdb-rkv", version = "0.14" }
# Networking
tokio       = { version = "1.35", features = ["full"] }
snow        = { version = "0.9", features = ["default-resolver"] }
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
# Serialization
serde       = { version = "1.0", features = ["derive"] }
serde_json  = { version = "1.0" }
bincode     = { version = "1.3" }
# Error handling
thiserror   = { version = "1.0" }
anyhow      = { version = "1.0" }
tempfile    = { version = "3.10" }
# Logging
tracing          = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Async
futures          = { version = "0.3" }
primitive-types  = { version = "0.12" }
# Internal crates
dom-core           = { path = "crates/dom-core" }
dom-consensus      = { path = "crates/dom-consensus" }
dom-crypto         = { path = "crates/dom-crypto" }
dom-serialization  = { path = "crates/dom-serialization" }
dom-pmmr           = { path = "crates/dom-pmmr" }
dom-pow            = { path = "crates/dom-pow" }
dom-chain          = { path = "crates/dom-chain" }
dom-store          = { path = "crates/dom-store" }
dom-tx             = { path = "crates/dom-tx" }
dom-slate          = { path = "crates/dom-slate" }
dom-mempool        = { path = "crates/dom-mempool" }
dom-wire           = { path = "crates/dom-wire" }
dom-config         = { path = "crates/dom-config" }
dom-wallet         = { path = "crates/dom-wallet" }
dom-wallet-crypto  = { path = "crates/dom-wallet-crypto" }
dom-wallet-keys    = { path = "crates/dom-wallet-keys" }
dom-wallet2        = { path = "crates/dom-wallet2" }
dom-node           = { path = "crates/dom-node" }
dom-rpc            = { path = "crates/dom-rpc" }
axum = { version = "0.7", features = ["json"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
bip39 = { version = "2.0", features = ["rand"] }
# Property-based testing (Roadmap v2 Phase 1.1 — replay determinism, reorg fuzz).
proptest = { version = "1" }

[profile.release]
opt-level       = 3
lto             = "fat"
codegen-units   = 1
panic           = "abort"
overflow-checks = true   # consensus-critical: never disable

[profile.dev]
overflow-checks = true   # enforce even in dev
