[package]
name = "dom-agent-runner"
description = "DOM Protocol portable development automation runner"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "dom-agent-runner"
path = "src/main.rs"

[dependencies]
anyhow = { version = "1.0" }
clap = { version = "4.5", features = ["derive"] }
dom-test-runner = { path = "../dom-test-runner" }

[dev-dependencies]
tempfile = "3"
