[package]
name        = "dom-config"
description = "DOM node configuration"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
dom-core.workspace    = true
serde.workspace       = true
serde_json.workspace  = true
thiserror.workspace   = true

[dev-dependencies]
# dom-shield proptest-invariante: NodeConfig JSON serde round-trip stability.
proptest.workspace = true
