[package]
name        = "dom-faucet"
description = "DOM Protocol — Testnet faucet service"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
authors.workspace      = true
license.workspace      = true

[dependencies]
dom-core.workspace = true
dom-crypto.workspace = true
dom-wallet.workspace = true
tokio.workspace    = true
serde.workspace    = true
serde_json.workspace = true
tracing.workspace  = true
tracing-subscriber.workspace = true
axum.workspace     = true
tower-http.workspace = true
thiserror.workspace = true
hex.workspace      = true
url                = "2.5"

[features]
# dom-shield: default-OFF probe that re-exports the private payment-request
# parser for external fuzz/integration tests. Never enabled in production.
shield-probe = []

[dev-dependencies]
proptest.workspace = true
# enable the shield probe whenever this crate is built as a test target
dom-faucet = { path = ".", features = ["shield-probe"] }
