[package]
name        = "dom-integration-tests"
description = "DOM protocol — dom-integration-tests"
version.workspace    = true
edition.workspace    = true
rust-version.workspace = true
authors.workspace    = true
license.workspace    = true

[dependencies]
dom-core.workspace = true
thiserror.workspace = true
