[package]
name = "dom-integration-tests"
description = "DOM Protocol — End-to-end integration tests"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
dom-node.workspace = true
dom-config.workspace = true
dom-wallet.workspace = true
dom-core.workspace = true
dom-chain.workspace = true
dom-consensus.workspace = true
dom-serialization.workspace = true
dom-store.workspace = true

tokio.workspace = true
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde_json = "1"
hex = { workspace = true }
dom-crypto = { workspace = true }
