[package]
name        = "dom-node"
description = "DOM full node binary"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "dom-node"
path = "src/main.rs"

[dependencies]
thiserror.workspace = true
dom-core.workspace      = true
dom-consensus.workspace = true
dom-crypto.workspace    = true
dom-store.workspace     = true
dom-chain.workspace     = true
dom-mempool.workspace   = true
dom-wire.workspace      = true
dom-config.workspace    = true
dom-wallet.workspace    = true
dom-pow.workspace       = true
tokio.workspace         = true
tracing.workspace       = true
tracing-subscriber.workspace = true
serde_json.workspace    = true
anyhow.workspace        = true
hex.workspace           = true
dom-serialization.workspace = true
primitive-types.workspace = true
randomx-rs.workspace     = true
rand.workspace          = true
dom-rpc                 = { path = "../dom-rpc" }
dom-pmmr.workspace      = true
futures.workspace       = true

[dev-dependencies]
tempfile = "3"
