[package]
name        = "dom-pow"
description = "DOM protocol — ASERT difficulty adjustment (RFC-0003)"
version.workspace    = true
edition.workspace    = true
rust-version.workspace = true
authors.workspace    = true
license.workspace    = true

[dependencies]
dom-core.workspace  = true
thiserror.workspace = true

primitive-types.workspace = true
dom-serialization.workspace = true
randomx-rs.workspace = true
blake2.workspace = true
