[package]
name        = "dom-rpc"
description = "DOM protocol — dom-rpc"
version.workspace    = true
edition.workspace    = true
rust-version.workspace = true
authors.workspace    = true
license.workspace    = true

[dependencies]
tower = { version = "0.4", features = ["timeout", "limit", "util"] }
dom-core.workspace      = true
dom-mempool.workspace   = true
dom-consensus.workspace = true
dom-serialization.workspace = true
thiserror.workspace     = true
tokio.workspace         = true
serde.workspace         = true
serde_json.workspace    = true
tracing.workspace       = true
hex.workspace           = true
axum = { version = "0.7", features = ["json"] }
tower_governor = "0.4"
tower-http = { version = "0.5", features = ["cors", "timeout", "limit"] }
rand = "0.8"
governor = "0.6"
dirs = "5"

[dev-dependencies]
http-body-util = "0.1"

