[package]
name        = "dom-store"
description = "DOM persistent storage — LMDB backend"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
dom-core.workspace          = true
dom-consensus.workspace     = true
dom-serialization.workspace = true
dom-pmmr.workspace          = true
lmdb.workspace              = true
thiserror.workspace         = true
blake2.workspace            = true
tracing.workspace           = true
hex.workspace               = true

[dev-dependencies]
tempfile = "3.10"
lmdb.workspace = true

[target.'cfg(unix)'.dev-dependencies]
libc = "0.2"
