[package]
name        = "dom-store"
description = "DOM persistent storage — LMDB backend"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
dom-core.workspace          = true
dom-consensus.workspace     = true
dom-serialization.workspace = true
dom-pmmr.workspace          = true
lmdb.workspace              = true
thiserror.workspace         = true
blake2.workspace            = true
tracing.workspace           = true
hex.workspace               = true

[dev-dependencies]
# F4-equivalent persisted-state roundtrip invariants (tests/persisted_roundtrip_proptest.rs).
proptest.workspace = true
tempfile = "3.10"
lmdb.workspace = true
dom-crypto.workspace      = true
dom-pow.workspace         = true
primitive-types.workspace = true

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }

[target.'cfg(unix)'.dev-dependencies]
libc = "0.2"
