[package]
name = "dom-test-runner"
description = "DOM Protocol portable test orchestration runner"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "dom-test-runner"
path = "src/main.rs"

[dependencies]
anyhow = { version = "1.0" }
clap = { version = "4.5", features = ["derive"] }

[dev-dependencies]
tempfile = "3"
