[package]
name = "dom-test-runner"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Portable Windows-first test runner for the DOM Protocol workspace."

[[bin]]
name = "dom-test-runner"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true

[dev-dependencies]
# Tests use only std as well.
