[package]
name        = "dom-test-vectors"
description = "DOM protocol — deterministic test vector generation and verification"
version.workspace    = true
edition.workspace    = true
rust-version.workspace = true
authors.workspace    = true
license.workspace    = true

[dependencies]
dom-core.workspace          = true
dom-crypto.workspace        = true
dom-serialization.workspace = true
dom-pmmr.workspace          = true
dom-pow.workspace           = true
dom-consensus.workspace     = true
hex.workspace               = true

[dev-dependencies]
dom-mempool.workspace = true
dom-wire.workspace    = true
