[package]
name        = "dom-tx"
description = "DOM protocol — dom-tx"
version.workspace    = true
edition.workspace    = true
rust-version.workspace = true
authors.workspace    = true
license.workspace    = true

[dependencies]
dom-core.workspace = true
dom-consensus.workspace = true
dom-crypto.workspace = true
dom-serialization.workspace = true
thiserror.workspace = true
