[package]
name = "dom-wallet-app"
description = "DOM Protocol — conservative desktop wallet application"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
dom-core.workspace = true
dom-crypto.workspace = true
dom-serialization.workspace = true
dom-wire.workspace = true
dom-wallet.workspace = true
hex.workspace = true
eframe = { version = "0.35", default-features = false, features = ["default_fonts", "glow", "wayland", "x11"] }
rand.workspace = true
url = "2.5"

[dev-dependencies]
tempfile = "3.10"
proptest.workspace = true
