[package]
name = "dom-wallet-core-api"
description = "DOM embedded node API for Wallet V3"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
dom-core.workspace = true
dom-consensus.workspace = true
thiserror.workspace = true
hex.workspace = true
