[package]
name        = "dom-wallet-keys"
description = "DOM protocol — shared wallet key derivation: BIP-39 seed handling + BIP-32/BIP-44 HD derivation of coinbase/spend blindings. Single audited source for dom-wallet (v1) and dom-wallet2 (v2)."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
authors.workspace      = true
license.workspace      = true

[dependencies]
# BIP-32 HMAC-SHA512 derivation.
hmac.workspace = true
sha2.workspace = true
# secp256k1 (libsecp256k1 binding) — BIP-32 reference curve ops: scalar add
# mod n (child key), IL<n validation, and point(kpar) for non-hardened
# derivation. Bit-identical to the official BIP-32 test vectors.
secp256k1.workspace = true
# BIP-39 mnemonic ↔ seed.
bip39.workspace = true
# Secure RNG for fresh mnemonic generation.
rand.workspace = true
# Secret zeroization.
zeroize.workspace = true
# Errors.
thiserror.workspace = true
