[package]
name        = "dom-wallet"
description = "DOM Protocol — Mimblewimble wallet with persistent encrypted storage"
version.workspace    = true
edition.workspace    = true
rust-version.workspace = true
authors.workspace    = true
license.workspace    = true

[dependencies]
hmac.workspace = true
bip39.workspace = true
dom-core.workspace          = true
dom-crypto.workspace        = true
dom-consensus.workspace     = true
dom-tx.workspace            = true
dom-serialization.workspace = true

# Security & Cryptography
zeroize.workspace          = true
argon2.workspace           = true
sha2.workspace             = true
hkdf.workspace             = true
chacha20poly1305.workspace = true

# Storage & Serialization
serde.workspace      = true
serde_json.workspace = true

# Filesystem locking (advisory exclusive lockfile for portable WalletDir)
fs2 = "0.4"

# Error handling & logging
thiserror.workspace = true
tracing.workspace   = true

# Random & encoding
rand.workspace = true
hex.workspace  = true
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"

[dev-dependencies]
tempfile = "3.10"
