[package]
name        = "dom-wallet"
description = "DOM Protocol — Mimblewimble wallet with persistent encrypted storage"
version.workspace    = true
edition.workspace    = true
rust-version.workspace = true
authors.workspace    = true
license.workspace    = true

[dependencies]
hmac.workspace = true
bip39.workspace = true
dom-core.workspace          = true
dom-crypto.workspace        = true
dom-consensus.workspace     = true
dom-tx.workspace            = true
dom-slate.workspace         = true
dom-serialization.workspace = true
dom-wallet-crypto.workspace = true
dom-wallet-keys.workspace   = true

# Security & Cryptography
zeroize.workspace          = true
argon2.workspace           = true
sha2.workspace             = true
hkdf.workspace             = true
chacha20poly1305.workspace = true

# Storage & Serialization
serde.workspace      = true
serde_json.workspace = true

# Filesystem locking (advisory exclusive lockfile for portable WalletDir)
fs2 = "0.4"

# Error handling & logging
thiserror.workspace = true
tracing.workspace   = true
clap = { version = "4.5", features = ["derive"] }

# Random & encoding
rand.workspace = true
hex.workspace  = true
k256.workspace = true

# HTTP client for the wallet ↔ node RPC (Phase 1.9). Blocking variant so
# dom-wallet remains synchronous; reqwest spawns its own internal
# runtime for I/O.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking"] }
url     = "2.5"

[dev-dependencies]
tempfile = "3.10"
# Phase 1.9 RPC adversarial tests stand up minimal raw-socket mock
# servers to exercise timeout / malformed-response / connection-reset
# failure modes. Kept dev-only so production builds don't link tokio.
tokio    = { version = "1", features = ["rt", "macros", "net", "io-util", "time", "sync"] }
# dom-shield Onda 2: property-based invariants (coin selection, arithmetic
# asymmetry, balance aggregation). Dev-only.
proptest.workspace = true
